<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="calendar_event_added_message">"Evento Agregado al Calendario!"</string>
    <string name="calendar_event_already_added_message">"Evento borrado del Calendario!!!"</string>
    <string name="calendar_event_wrong_message">"Fechas Incorrectas!!"</string>
    <string name="calendar_event_undefined_error">"Se produjo un error!"</string>
    <string name="calendar_event_deleted_error">"Error:"</string>
    <string name="app_name">Swipper</string>
    <string name="title_section1">Destacado</string>
    <string name="sin_novedades_detailed">Busca por mas novedades aqui pronto!!!</string>
    <string name="search_novedades">Buscar&#8230;</string>
    <string name="sin_novedades">No existen novedades!</string>
    <string name="title_section2">Esculturas</string>
    <string name="title_section3">Eventos</string>
    <string name="action_settings">Configuracion</string>
    <string name="action_search">Buscar</string>
    <string name="drawer_open">Abrir Menu</string>
    <string name="drawer_close">Cerrar Menu</string>
    <string name="map">Mapa de Esculturas</string>
    <string name="lento_internet">La conexion se esta tardando, pero estoy tratando de re-intentar! Si podes conectate con WIFI!</string>
    <string name="no_internet">Sin Internet no se donde estas! Prendelo o conectate con WIFI y proba de nuevo!</string>
    <string name="autores">Perfiles de Autores</string>
    <string name="about">Swipper</string>
    <string name="retry">Re-Intentar!</string>
    <string name="contacto_menu">Contacto&#8230;</string>
    <string name="current_location">Obteniendo nombre de Calle&#8230;</string>
    <string name="detailed_about">Es una idea que nace desde el seno de Código Ciudadano inicialmente para ser un catálogo de las esculturas de la ciudad de Resistencia Chaco pero que va mutando día a día y pretende ser un catálogo cultural de la region. Fue construido con el esfuerzo y la colaboración de mucha gente que decidió colaborar con su tiempo y recursos en esta idea sin fines de lucro que pretende ser una herramienta para todos los chaqueños y para todos los ciudadanos del mundo interesados. Resistenciarte es un producto Open Source liberado bajo la licencia GNU/GPL v2, podes descarte el fuente, instalarlo y modificarlo como gustes siempre y cuando lo sigas distrubuyendo libremente. Aquí podrás acceder a los fuentes de la aplicación https://github.com/codigociudadano/esculturas. Los datos de ResistenciArte estan abiertos al mundo mediante una API que puede ser consumida por cualquier persona en cualquier parte del mundo. Podes conocer nuestra API desde nuestra documentación http://www.resistenciarte.org/developers/api_v1_esculturas. La mayoría de la información sobre esculturas y autores que posee ResistenciArte fue obtenida del sitio Chapay el cual realizó un trabajo increible catalogando la información y publicandola bajo la licencia Creative Commons los que nos permite usarla siguendo sus condiciones de redistrubución. Muchas gracias por su gran trabajo Chapay.</string>
    <string name="obra"> - Obra Destacada de la semana - </string>
    <string name="cc_detail">Código Ciudadano es una organización sin fines de lucro que busca mejorar la calidad de vida de la sociedad mediante el uso de tecnología. Buscamos Diseñadores, Desarrolladores, Testers y gente que quiera ayudar al desarrollo y mantenimiento de nuestros proyectos sociales!</string>
    <string name="mv_detail">Utilizamos el diseño para resolver problemas comunicacionales gráficamente y tratar de hacer llegar el mensaje a la mayoría de las personas o publico meta a quien va dirigido. Apuntamos a construir ideas originales y pregnantes</string>
    <string name="mm_detail">We are an Argentinian company, based in Resistencia Chaco, specialized in building modern web applications. Our experience and passion for the internet is what makes our products so good and clients so happy. Look around and do not hesitate to contact us if you think that we should work together.</string>
    <string name="obra_detaled"></string>
    <string name="idea">Idea y Desarrollo</string>
    <string name="disenio">Diseño Grafico</string>
    <string name="servidor">Hosting y Servidores</string>
    <string name="identificar">Identificar Escultura</string>
    <string name="loading_data">Descargando datos&#8230;</string>
    <string name="sync">Sincronizando calendario&#8230;</string>
    <string name="button">Cargar mas esculturas&#8230;</string>
    <string name="button_autores">Cargar mas autores&#8230;</string>
    <string name="button_novedades">Cargar mas novedades&#8230;</string>
    <string name="button_before">Cargar Anteriores&#8230;</string>
    <string name="ver_en_galeria">Galeria de Fotos</string>
    <string name="title_obra">---</string>
    <string name="asistirOK">Eliminar recordatorio</string>
    <string name="asistir">Añadir recordatorio</string>
    <string name="detalles_obra">Ver Detalles&#8230;</string>
    <string name="title_share">Compartir</string>
    <string name="sync_finish">Sincronizacion Terminada!</string>
    <string name="read_more">Leer mas&#8230;</string>
    <string name="equipo">Equipo ResistenciArte</string>
    <string name="contact">Queres contarnos que te parecio la app? Queres sumarte a la causa de codigo ciudadano? Tenes ganas de hablar? Escribinos!!</string>
    <string name="mate">42mate</string>
    <string name="confirm">Prender GPS/RED</string>
    <string name="cancel">Cancelar</string>
    <string name="author">Autor</string>
    <string name="author_getting">Obteniendo Autor&#8230;</string>
    <string name="enviar">Enviar</string>
    <string name="error_field_required">Informacion Requerida</string>
    <string name="ubic">Ubicación</string>
    <string name="title_activity_splash">Swipper</string>
    <string name="share_tittle">Estoy viendo la obra:[escultura] de la ciudad de Resistencia usando Resistenciarte! Usala vos tambien </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Mapa de Esculturas</string>
    <string name="title_activity_nearby_locations">Esculturas Cercanas</string>
    <string name="autor_obra_specifi">Lista de Obras</string>
    <string name="not_working_well">La funcion principal no estará habilitada hasta que prendas el gps!</string>
    <string name="gps_not_turned_on">Tu GPS no esta prendido</string>
    <string name="gps_not_turned_on_yet">Aun no prendiste tus servicios de ubicación (GPS/RED)</string>
    <string name="gps_not_turned_on_details">No puedo saber donde estas, cambialo aquí!</string>
    <string name="title_activity_about">Acerca de&#8230;</string>
    <string name="title_activity_autores">Listado de Autores</string>
    <string name="title_activity_autor">Autor</string>
    <string name="title_activity_obra">Obra</string>
    <string name="title_activity_cover_flow_example">Galeria de Fotos</string>
    <string name="title_activity_standard_image_programmatic">Detalle de Obra</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_place_info">PlaceInfo</string>

</resources>