<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#017d6c"
    android:gravity="center"
    tools:context="com.globant.labs.swipper.HomeActivity$PlaceholderFragment" >
    
    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="23dp"
                    android:src="@drawable/ic_launcher_web" />

                <TextView
                    android:id="@+id/loading_status_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowRadius="20"
                    android:text="@string/loading_data"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pbDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ScrollView
         android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_load_before"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:shadowColor="#000000"
                            android:shadowDx="2"
                            
                            android:shadowDy="2"
                            android:shadowRadius="1"
                android:text="@string/button_before"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            
            <LinearLayout
                android:id="@+id/text_view_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#000000"
                android:gravity="center"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/btn_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:shadowColor="#000000"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            
                            android:shadowRadius="1"
                android:text="@string/button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>