<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
        android:background="#019682"
    android:orientation="vertical"
    tools:context="com.globant.labs.swipper.AutorActivity" >

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <ImageView
                    android:id="@+id/imagedd"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="23dp"
                    android:src="@drawable/ic_launcher_web" />

                <TextView
                    android:id="@+id/loading_status_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@android:color/darker_gray"
                    android:shadowRadius="20"
                    android:text="@string/loading_data"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/pbDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/home_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#017d6c"
                android:gravity="center"
                android:orientation="horizontal" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <FrameLayout
                        android:id="@+id/default_image"
                        android:layout_width="164dp"
                        android:layout_height="164dp"
                        android:orientation="horizontal"
                        android:scrollbarSize="15dp"
                        android:layout_gravity="center"
                        android:scrollbarStyle="insideOverlay"
                        android:scrollbars="vertical" >

                        <ImageView
                            android:layout_width="164dp"
                            android:layout_height="164dp"
                            android:background="@drawable/ic_action_pin"
                            android:scaleX="0.5"
                            android:scaleY="0.5" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/progress"
                        android:layout_width="164dp"
                        android:layout_gravity="center"
                        android:layout_height="164dp" >

                        <ProgressBar
                            android:layout_width="164dp"
                            android:layout_height="164dp"
                            android:layout_gravity="center"
                            android:focusable="true"
                            android:paddingLeft="10dp"
                            android:scaleX="0.25"
                            android:scaleY="0.25" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </FrameLayout>
                </FrameLayout>
            </LinearLayout>

            <com.jmv.codigocom.globant.labs.swipper.comps.TextViewEx   android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:padding="15dp"
                android:gravity="center"
                android:text="@string/title_obra"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/see_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_gallery"
                android:gravity="left|center_vertical"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:background="#038c78"
                android:shadowRadius="2"
                android:text="@string/ver_en_galeria"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>